# HammerAndNail

./: .gitignore  LICENSE  README.md  hammer.bat  pyproject.toml
configs/: default.toml  learning.toml
docs/plans/: 2026-02-23-hammernail-design.md  2026-02-23-hammernail-implementation.md
examples/: directive.md
hammer/: bootstrap.py  cli.py  runner.py
hammer/chat/: developer.py  directive.py  interactive.py  session.py  simple_actions.py
hammer/core/: branch_manager.py  diff_manager.py  loop.py  state.py  validator.py
hammer/learning/: __init__.py  config.py  experience_store.py  reward.py  state_encoder.py  strategies.py  strategy_selector.py
hammer/llm/: base.py  model_router.py  ollama_provider.py
hammer/plugins/: __init__.py
hammer/tools/: docker_tools.py  git_tools.py  registry.py  test_tools.py
scripts/: hammer.sh  hammer_prompt.sh
tests/: test_cli.py
tests/chat/: test_simple_actions.py
tests/core/: test_branch_manager.py  test_diff_manager.py  test_loop.py  test_state.py  test_validator.py
tests/learning/: __init__.py  test_experience_store.py  test_loop_learning.py  test_reward.py  test_strategy_selector.py
tests/llm/: test_model_router.py  test_ollama_provider.py
tests/tools/: test_registry.py
