[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hammernail"
version = "0.1.0"
description = "Modular autonomous coding runtime"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "respx>=0.21",
]

[project.scripts]
hammer = "hammer.cli:main"
EngineerExternal = "hammer.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hammer*"]
